utilize pthreads to handle multiple clients.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SERVER_SRCS "chat_server.c"
 set(CLIENT_SRCS "chat_client.c"
                 "common.c"
                 "client_api.c")
-
+find_package (Threads)
 add_executable(chat_server ${SERVER_SRCS})
 add_executable(chat_client ${CLIENT_SRCS})
+target_link_libraries(chat_server ${CMAKE_THREAD_LIBS_INIT})
